first mobile integration

--- a/lo-mercat-app/styles/globals.scss
+++ b/lo-mercat-app/styles/globals.scss
@@ -1,3 +1,5 @@
+@use "./variables" as *;
+
 html,
 body {
   padding: 0;
@@ -20,21 +22,21 @@ a {
     color-scheme: dark;
   }
   body {
-    color: white;
-    background: black;
+    color: $light;
+    background: $dark;
   }
 }
 
 $theme-colors: (
-  'primary': #596B36,
-  'secondary': #7F8587,
-  'success': #519c49,
-  'info': #1e201b,
-  'warning': #ce8b11,
-  'danger': #f44336,
-  'light': #E0E7D8,
-  'dark-accent': #958166,
-  'dark': #1F211C
+  'primary': $primary,
+  'secondary': $secondary,
+  'success': $success,
+  'info': $info,
+  'warning': $warning,
+  'danger': $danger,
+  'light': $light,
+  'dark-accent': $dark-accent,
+  'dark': $dark
 );
 
 @import '/node_modules/bootstrap/scss/bootstrap.scss';
